[package]
name = "sproot"
version = "0.0.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11"
actix-web = { version = "4.0", features = ["rustls"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
env_logger = "0.9"
jsonwebtoken = "8.0"
log = "0.4"
r2d2 = "0.8"
rustls = "0.20"
rustls-pemfile = "0.3"
serde_json = "1.0"
simd-json = "0.4"
sha1_smol = { version = "1.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
snmalloc-rs = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
walkdir = "2.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
