[package]
name = "sproot"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys_metrics = { git = "https://github.com/Martichou/sys_metrics" }
askama = "0.11"
actix-web = { version = "4.2", features = ["rustls"] }
actix-session = { version = "0.7", features = ["cookie-session"] }
axum = { version = "0.5" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
futures-util = "0.3"
log = "0.4"
r2d2 = "0.8"
rustls = "0.20"
rustls-pemfile = "1.0"
serde_json = "1.0"
simd-json = "0.6"
serde = { version = "1.0", features = ["derive"] }
snmalloc-rs = "0.3"
thiserror = "1.0"
uuid = { version = "1.1", features = ["serde", "v4"] }
walkdir = "2.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
