[package]
name = "sproot"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys_metrics = { git = "https://github.com/Martichou/sys_metrics" }
askama = "0.12"
actix-web = { version = "4.3", features = ["rustls"] }
actix-session = { version = "0.10", features = ["cookie-session"] }
axum = { version = "0.7" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
futures-util = "0.3"
log = "0.4"
once_cell = "1.14"
r2d2 = "0.8"
regex = "1.6"
rustls = "0.23"
rustls-pemfile = "2.1"
serde_json = "1.0"
simd-json = "0.14"
serde = { version = "1.0", features = ["derive"] }
snmalloc-rs = "0.3"
thiserror = "1.0"
ts-rs = { version = "10.0", features = ["serde-compat", "uuid-impl", "chrono-impl"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
walkdir = "2.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
